@@ -1,154 +1,237 @@
-Building instructions
+Installation Instructions
+*************************
+
+Copyright (C) 1994, 1995, 1996, 1999, 2000, 2001, 2002, 2004, 2005,
+2006, 2007 Free Software Foundation, Inc.
+
+This file is free documentation; the Free Software Foundation gives
+unlimited permission to copy, distribute and modify it.
+
+Basic Installation
+==================
+
+Briefly, the shell commands `./configure; make; make install' should
+configure, build, and install this package.  The following
+more-detailed instructions are generic; see the `README' file for
+instructions specific to this package.
+
+   The `configure' shell script attempts to guess correct values for
+various system-dependent variables used during compilation.  It uses
+those values to create a `Makefile' in each directory of the package.
+It may also create one or more `.h' files containing system-dependent
+definitions.  Finally, it creates a shell script `config.status' that
+you can run in the future to recreate the current configuration, and a
+file `config.log' containing compiler output (useful mainly for
+debugging `configure').
+
+   It can also use an optional file (typically called `config.cache'
+and enabled with `--cache-file=config.cache' or simply `-C') that saves
+the results of its tests to speed up reconfiguring.  Caching is
+disabled by default to prevent problems with accidental use of stale
+cache files.
+
+   If you need to do unusual things to compile the package, please try
+to figure out how `configure' could check whether to do them, and mail
+diffs or instructions to the address given in the `README' so they can
+be considered for the next release.  If you are using the cache, and at
+some point `config.cache' contains results you don't want to keep, you
+may remove or edit it.
+
+   The file `configure.ac' (or `configure.in') is used to create
+`configure' by a program called `autoconf'.  You need `configure.ac' if
+you want to change it or regenerate `configure' using a newer version
+of `autoconf'.
+
+The simplest way to compile this package is:
+
+  1. `cd' to the directory containing the package's source code and type
+     `./configure' to configure the package for your system.
+
+     Running `configure' might take a while.  While running, it prints
+     some messages telling which features it is checking for.
+
+  2. Type `make' to compile the package.
+
+  3. Optionally, type `make check' to run any self-tests that come with
+     the package.
+
+  4. Type `make install' to install the programs and any data files and
+     documentation.
+
+  5. You can remove the program binaries and object files from the
+     source code directory by typing `make clean'.  To also remove the
+     files that `configure' created (so you can compile the package for
+     a different kind of computer), type `make distclean'.  There is
+     also a `make maintainer-clean' target, but that is intended mainly
+     for the package's developers.  If you use it, you may have to get
+     all sorts of other programs in order to regenerate files that came
+     with the distribution.
+
+  6. Often, you can also type `make uninstall' to remove the installed
+     files again.
+
+Compilers and Options
 =====================
 
-You can use either Python distutils, GNU Automake or Boost BJam to
-build pytave. The configure script outputs files for all these build
-systems. Autoconf's VPATH is supported on all build systems.
+Some systems require unusual options for compilation or linking that the
+`configure' script does not know about.  Run `./configure --help' for
+details on some of the pertinent environment variables.
 
-    Use the configure script to set up Octave and Boost::Python
-paths. Run `./configure --help' for more info.
+   You can give `configure' initial values for configuration parameters
+by setting variables in the command line or in the environment.  Here
+is an example:
 
-Dependencies
-============
+     ./configure CC=c99 CFLAGS=-g LIBS=-lposix
 
-Configuring:
-	an sh shell capable of running `configure'
+   *Note Defining Variables::, for more details.
 
-Building:
-	Python's distutils or
-	make or
-	BJam
+Compiling For Multiple Architectures
+====================================
 
-Linked and tested with:
-    Python 2.4
-    Boost::Python 1.33
-    Octave 3.0.2
+You can compile the package for more than one kind of computer at the
+same time, by placing the object files for each architecture in their
+own directory.  To do this, you can use GNU `make'.  `cd' to the
+directory where you want the object files and executables to go and run
+the `configure' script.  `configure' automatically checks for the
+source code in the directory that `configure' is in and in `..'.
 
-Bootstraping from Bazaar trunk
-==============================
+   With a non-GNU `make', it is safer to compile the package for one
+architecture at a time in the source code directory.  After you have
+installed the package for one architecture, use `make distclean' before
+reconfiguring for another architecture.
 
-  1. `bzr branch lp:pytave'
+Installation Names
+==================
 
-  2. `autoreconf --install'
+By default, `make install' installs the package's commands under
+`/usr/local/bin', include files under `/usr/local/include', etc.  You
+can specify an installation prefix other than `/usr/local' by giving
+`configure' the option `--prefix=PREFIX'.
 
-  3. `./configure'
+   You can specify separate installation prefixes for
+architecture-specific files and architecture-independent files.  If you
+pass the option `--exec-prefix=PREFIX' to `configure', the package uses
+PREFIX as the prefix for installing programs and libraries.
+Documentation and other data files still use the regular prefix.
 
-Autotools
-=========
+   In addition, if you use an unusual directory layout you can give
+options like `--bindir=DIR' to specify different values for particular
+kinds of files.  Run `configure --help' for a list of the directories
+you can set and what kinds of files go in them.
 
-The Autotools build system need not be installed to build the
-module. You need `make' and all library dependencies though.
+   If the package supports it, you can cause programs to be installed
+with an extra prefix or suffix on their names by giving `configure' the
+option `--program-prefix=PREFIX' or `--program-suffix=SUFFIX'.
 
-  1. Create the `Makefile' by typing:
-	 `./configure --prefix=/directory/where/you/want/the/module/file'
+Optional Features
+=================
 
-  2. Type `make' to build the extention module.
+Some packages pay attention to `--enable-FEATURE' options to
+`configure', where FEATURE indicates an optional part of the package.
+They may also pay attention to `--with-PACKAGE' options, where PACKAGE
+is something like `gnu-as' or `x' (for the X Window System).  The
+`README' should mention any `--enable-' and `--with-' options that the
+package recognizes.
 
-  3. To copy the pytave dynamic library to the prefix, type
-     `make install'
+   For packages that use the X Window System, `configure' can usually
+find the X include and library files automatically, but if it doesn't,
+you can use the `configure' options `--x-includes=DIR' and
+`--x-libraries=DIR' to specify their locations.
 
-BJam
-====
-
-BJam must be installed in order to build the module. You also need a
-proper `user-config.jam' file in your home directory.
-
-  1. Create `Jamfile' and `project-root.jam' by typing `./configure'
-
-  2. Use your `bjam' command to build the extention module. 
-
-user-config.jam
-===============
-
-For your convenience, here the content of a typical ~/user-config.jam
-on a GNU/Linux system:
-
-using gcc ;
-using python : 2.5 ;
-
-Distutils
-=========
-
-  1. Create the `setup.py' file by typing `./configure'
-
-  2. Run `python setup.py build' to build and package the extention
-     module together with the pure Python files.
-
-Running from build directory
-============================
-
-Pytave is made up of three parts. The `pytave' package, the
-`pytave/pytave' module and the `pytave/_pytave' extention. When the
-user uses `import pytave', the pytave package __init__ script loads
-both the module and the extention. It is important that they both can
-be found. 
-
-  1. Follow the Distutils build instructions. A complete Python
-     package directory called `pytave' is created in
-     `build/lib.something'
-
-  2. Start the Python interactive interpreter with
-     `PYTHONPATH=build/lib.linux-i686-2.4/ python' (with appropriate
-     changes for your system.)
-
-  3. In the interpreter you can now access Octave through Python:
-
-import pytave
-import Numeric
-pytave.feval(1, "cos", 0)
-b = pytave.addpath(".")
-pytave.feval(1, "testfile", 42)
-
-     (Observe that there is no testfile.m file in the distribution.
-     You could create one for yourself.)
-
-    Using BJam or Automake instead of Distutils, you load the
-`pytave/pytave' module and the extention instead of the whole
-package. Using `import pytave' now calls the module directly, but the
-difference is transparent to the user.
-
-    Basically all you want to do is load Python with shared library
-for the pytave extention (called `pytave/_pytave') and the native
-`pytave/pytave' module. BJam creates shared library in the
-`bin/something/something' directory, while Autotools hide a working
-shared library in the `.libs' directory. The contents of the `pytave'
-package is stored in the directory `package' of the source
-package. This is an example for an Autotools build.
-
-  1. Follow the Autotools build instructions.
-
-  2. Start the Python interpreter with a Python path set to a path
-     containing `_pytave.so' and the `package' directory. A common way
-     to do this with the bash shell is to execute this command:
-     `PYTHONPATH=.libs:package python'.
-
-     With BJam that command would be something like:
-     `PYTHONPATH=bin/something/something:package python'.
-
-Running test suite in build directory
-=====================================
-
-Read the instructions above, and start the script test/test.py.
-
-Installing with distutils
-=========================
-
-  1. Run `python setup.py install'
-
-Creating a source dist
-======================
-
-  1. Run `make distcheck'
-
-Hint about foreign systems
+Specifying the System Type
 ==========================
 
-If you are running on a system incapable of executing the configure
-scripts (e.g. a Microsoft Windows system), you may want to try
-installing the `MinGW' and `MSYS' packages, and build everything
-inside that environment.  This isn't for the faint of hearted though,
-since you need/want to build Octave too.  It is probably easier than
-trying to build without configure scripts, that's all.  There are no
-guarentees that it will build at all, it has not been tested.
+There may be some features `configure' cannot figure out automatically,
+but needs to determine by the type of machine the package will run on.
+Usually, assuming the package is built to be run on the _same_
+architectures, `configure' can figure that out, but if it prints a
+message saying it cannot guess the machine type, give it the
+`--build=TYPE' option.  TYPE can either be a short name for the system
+type, such as `sun4', or a canonical name which has the form:
 
-EOF.
+     CPU-COMPANY-SYSTEM
+
+where SYSTEM can have one of these forms:
+
+     OS KERNEL-OS
+
+   See the file `config.sub' for the possible values of each field.  If
+`config.sub' isn't included in this package, then this package doesn't
+need to know the machine type.
+
+   If you are _building_ compiler tools for cross-compiling, you should
+use the option `--target=TYPE' to select the type of system they will
+produce code for.
+
+   If you want to _use_ a cross compiler, that generates code for a
+platform different from the build platform, you should specify the
+"host" platform (i.e., that on which the generated programs will
+eventually be run) with `--host=TYPE'.
+
+Sharing Defaults
+================
+
+If you want to set default values for `configure' scripts to share, you
+can create a site shell script called `config.site' that gives default
+values for variables like `CC', `cache_file', and `prefix'.
+`configure' looks for `PREFIX/share/config.site' if it exists, then
+`PREFIX/etc/config.site' if it exists.  Or, you can set the
+`CONFIG_SITE' environment variable to the location of the site script.
+A warning: not all `configure' scripts look for a site script.
+
+Defining Variables
+==================
+
+Variables not defined in a site shell script can be set in the
+environment passed to `configure'.  However, some packages may run
+configure again during the build, and the customized values of these
+variables may be lost.  In order to avoid this problem, you should set
+them in the `configure' command line, using `VAR=value'.  For example:
+
+     ./configure CC=/usr/local2/bin/gcc
+
+causes the specified `gcc' to be used as the C compiler (unless it is
+overridden in the site shell script).
+
+Unfortunately, this technique does not work for `CONFIG_SHELL' due to
+an Autoconf bug.  Until the bug is fixed you can use this workaround:
+
+     CONFIG_SHELL=/bin/bash /bin/bash ./configure CONFIG_SHELL=/bin/bash
+
+`configure' Invocation
+======================
+
+`configure' recognizes the following options to control how it operates.
+
+`--help'
+`-h'
+     Print a summary of the options to `configure', and exit.
+
+`--version'
+`-V'
+     Print the version of Autoconf used to generate the `configure'
+     script, and exit.
+
+`--cache-file=FILE'
+     Enable the cache: use and save the results of the tests in FILE,
+     traditionally `config.cache'.  FILE defaults to `/dev/null' to
+     disable caching.
+
+`--config-cache'
+`-C'
+     Alias for `--cache-file=config.cache'.
+
+`--quiet'
+`--silent'
+`-q'
+     Do not print messages saying which checks are being made.  To
+     suppress all normal output, redirect it to `/dev/null' (any error
+     messages will still be shown).
+
+`--srcdir=DIR'
+     Look for the package's source code in directory DIR.  Usually
+     `configure' can determine that directory automatically.
+
+`configure' also accepts some other, not widely useful, options.  Run
+`configure --help' for more details.
+
